fixing opacity on mobile?

--- a/style.css
+++ b/style.css
@@ -103,10 +103,15 @@ p {
 }
 
 .transparent-box {
-margin: 30px;
-background-color: #ffffff;
-/* border: 1px solid black; */
-opacity: 0.7;
+     margin: 30px;
+     background-color: #ffffff;
+     /* border: 1px solid black; */
+     opacity: 0.7;
+     /* Opacity for Modern Browsers */
+     filter: alpha(opacity=70);
+     /* Opacity for IE8 and lower */
+     zoom: 1;
+     /* Fix for IE7 */
 }
 
 .footer {
